--- a/app/src/main/res/layout/activity_detalle_mascota.xml
+++ b/app/src/main/res/layout/activity_detalle_mascota.xml
@@ -11,7 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:cardBackgroundColor="?attr/cardBackgroundColor"
-        android:layout_margin="20dp">
+        android:layout_margin="@dimen/veinte">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -20,25 +20,25 @@
             android:orientation="vertical">
 
         <ImageView android:id="@+id/imagenDetalleMascota"
-            android:layout_width="200dp"
-            android:layout_height="200dp"
+            android:layout_width="@dimen/doscientos"
+            android:layout_height="@dimen/doscientos"
             android:layout_gravity="center"/>
 
         <TextView android:id="@+id/nombre"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="30dp"
+            android:textSize="@dimen/treinta"
             android:textStyle="bold"
             android:textColor="?attr/textColor"
             android:gravity="center"
         />
 
-            <View android:layout_width="250dp"
+            <View android:layout_width="@dimen/doscientoscincuenta"
                 android:layout_gravity="center"
-                android:layout_marginTop="10dp"
-                android:layout_marginBottom="20dp"
-                android:layout_height="1dp"
-                android:background="#000000" />
+                android:layout_marginTop="@dimen/diez"
+                android:layout_marginBottom="@dimen/veinte"
+                android:layout_height="@dimen/uno"
+                android:background="@color/black" />
 
         <TextView android:id="@+id/especie"
             android:layout_width="match_parent"
@@ -73,9 +73,9 @@
         <Button android:id="@+id/verSeguimiento"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="@dimen/veinte"
             android:layout_gravity="center"
-            android:text="Ver seguimiento"
+            android:text="@string/ver_seguimiento"
             android:textColor="?attr/textColor"
             android:backgroundTint="?attr/buttonColor"
         />
