--- a/app/src/main/res/layout/activity_mascotas.xml
+++ b/app/src/main/res/layout/activity_mascotas.xml
@@ -27,8 +27,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/add_pet_icon"
-        android:layout_marginBottom="16dp"
-        android:layout_marginRight="16dp"
+        android:layout_marginBottom="@dimen/quince"
+        android:layout_marginRight="@dimen/quince"
         android:layout_alignBottom="@id/linear"
         android:layout_alignEnd="@+id/linear"
         android:background="?attr/buttonColor"
