--- a/app/src/main/res/layout/list_item_animales.xml
+++ b/app/src/main/res/layout/list_item_animales.xml
@@ -9,37 +9,37 @@
         android:id="@+id/tarjeta"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="10dp"
-        app:cardCornerRadius="10dp"
+        android:layout_margin="@dimen/diez"
+        app:cardCornerRadius="@dimen/diez"
         app:cardBackgroundColor="?cardBackgroundColor"
-        app:cardElevation="10dp">
+        app:cardElevation="@dimen/diez">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="10dp"
+            android:layout_margin="@dimen/diez"
             android:orientation="horizontal">
 
             <ImageView android:id="@+id/imagenMascota"
-                    android:layout_width="140dp"
-                    android:layout_height="140dp"
+                    android:layout_width="@dimen/cientocuarenta"
+                    android:layout_height="@dimen/cientocuarenta"
             />
-            <View android:layout_width="1dip"
-                android:layout_marginLeft="10dp"
+            <View android:layout_width="@dimen/uno"
+                android:layout_marginLeft="@dimen/diez"
                 android:layout_height="fill_parent"
-                android:background="#000000" />
+                android:background="@color/black" />
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="20dp"
+                android:layout_marginLeft="@dimen/veinte"
                 android:orientation="vertical">
 
 
 
                 <TextView
                     android:id="@+id/nombreMascota"
-                    android:textSize="20dp"
+                    android:textSize="@dimen/veinte"
                     android:textStyle="bold"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content" />
