--- a/app/src/main/res/layout/list_item_seguimientos.xml
+++ b/app/src/main/res/layout/list_item_seguimientos.xml
@@ -9,20 +9,20 @@
         android:id="@+id/tarjeta"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="10dp"
-        app:cardCornerRadius="10dp"
+        android:layout_margin="@dimen/diez"
+        app:cardCornerRadius="@dimen/diez"
         android:backgroundTint="?attr/cardBackgroundColor"
-        app:cardElevation="10dp">
+        app:cardElevation="@dimen/diez">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="20dp"
+        android:layout_marginLeft="@dimen/veinte"
         android:orientation="vertical">
 
         <TextView
             android:id="@+id/tipoSeguimiento"
-            android:textSize="20dp"
+            android:textSize="@dimen/veintesp"
             android:textStyle="bold"
             android:textColor="?attr/textColor"
             android:layout_width="match_parent"
